fix: the dark mode of menu bar not appearing (#18)

--- a/_sass/yat/_dark.scss
+++ b/_sass/yat/_dark.scss
@@ -50,10 +50,21 @@ html[data-theme="dark"]  {
     .ct-language-dropdown {
       color: #f8f8f8;
       background-color: $dark-background-color;
+      box-shadow: 0 0 3px 1px #0000005b;
     }
 
     .ct-language-selected, .ct-language-dropdown li:hover {
       background-color: #222 !important;
+    }
+
+    @include media-query($on-laptop) {
+      .menu-icon > svg {
+          fill: rgba($dark-text-color, 80%);
+      }
+
+      .site-nav input:checked ~ .trigger {
+        background-color: #090909;
+      }
     }
   }
 
